--- a/pages/subpage_1.html
+++ b/pages/subpage_1.html
@@ -15,22 +15,18 @@
             </div>
         </nav>
         <div class="title">
-            <h1>Careers in Web and User Experience</h1>
-            <h2>Careers in Web development using UI and UX are very diverse</h2>
-            <p>Jobs in web development offer a dynamic and 
-                ever-evolving career path that blends creativity 
-                with technical skill. From front-end developers who 
-                design and implement user interfaces to back-end 
-                developers who build and maintain the server-side 
-                infrastructure, each role plays a crucial part in 
-                creating seamless and engaging online experiences. 
-                With the rise of technologies like React, Angular, 
-                and Node.js, web developers have access to powerful
-                 tools that can help them create innovative solutions. 
-                 The demand for web developers continues to grow as
-                  businesses and organizations increasingly rely on 
-                  web applications and digital platforms to connect 
-                  with their audiences and drive success.</p>
+            <h1>Key Job Roles in Web Development</h1>
+            <p>Web development offers excellent career prospects, 
+                with opportunities ranging from working in tech startups 
+                to large corporations, agencies, and freelancing. With the
+                constant evolution of technologies and frameworks, continuous 
+                learning and adaptability are key. Many developers advance to roles 
+                like lead developer, project manager, or even CTO, while others may 
+                specialize further in areas like security or performance optimization.
+
+                As businesses across all industries rely more heavily on their online
+                 presence, the demand for skilled web developers continues to grow, offering 
+                 a promising and rewarding career path.</p>
 
             <li>Front-end Developer</li>
             <li>Back-end Developer</li>
@@ -40,7 +36,7 @@
 
             <p>For more information and sources visit <a href="https://en.wikipedia.org/wiki/Web_development"
                 target="_blank">Link</a></p>
-            <img src="photos/photo1.jpg" alt="code" style="width:500px;height:600px;">
+            <img src="photos/photo3.jpg" alt="code" style="width:500px;height:600px;">
         </div>
     </section>
     
