--- a/pages/subpage_2.html
+++ b/pages/subpage_2.html
@@ -15,32 +15,16 @@
             </div>
         </nav>
         <div class="title">
-            <h1>Careers in Web and User Experience</h1>
             <h2>Careers in Web development using UI and UX are very diverse</h2>
-            <p>Jobs in web development offer a dynamic and 
-                ever-evolving career path that blends creativity 
-                with technical skill. From front-end developers who 
-                design and implement user interfaces to back-end 
-                developers who build and maintain the server-side 
-                infrastructure, each role plays a crucial part in 
-                creating seamless and engaging online experiences. 
-                With the rise of technologies like React, Angular, 
-                and Node.js, web developers have access to powerful
-                 tools that can help them create innovative solutions. 
-                 The demand for web developers continues to grow as
-                  businesses and organizations increasingly rely on 
-                  web applications and digital platforms to connect 
-                  with their audiences and drive success.</p>
-
-            <li>Front-end Developer</li>
-            <li>Back-end Developer</li>
-            <li>Server Engeneer</li>
-            <li>Cloud Engeneer</li>
-            <li>Data Specialist</li>
+            <p>Web development is one of the most dynamic and in-demand fields in the tech industry.
+                 It involves creating and maintaining websites or web applications that are accessible 
+                 via the internet. Jobs in this field are abundant and diverse, ranging from front-end 
+                 development to back-end development, full-stack roles, and even specialized positions 
+                 in areas like web design, UX/UI, and mobile web development.</p>
 
             <p>For more information and sources visit <a href="https://en.wikipedia.org/wiki/Web_development"
                 target="_blank">Link</a></p>
-            <img src="photos/photo1.jpg" alt="code" style="width:500px;height:600px;">
+            <img src="photos/photo2.jpg" alt="code" style="width:500px;height:600px;">
         </div>
     </section>
     
