--- a/pages/subpage_2.html
+++ b/pages/subpage_2.html
@@ -24,7 +24,7 @@
 
             <p>For more information and sources visit <a href="https://en.wikipedia.org/wiki/Web_development"
                 target="_blank">Link</a></p>
-            <img src="photos/photo2.jpg" alt="code" style="width:500px;height:600px;">
+            <img src="../photos/photo2.jpg" alt="code" style="width:500px;height:600px;">
         </div>
     </section>
     
