--- a/pages/subpage_1.html
+++ b/pages/subpage_1.html
@@ -36,7 +36,7 @@
 
             <p>For more information and sources visit <a href="https://en.wikipedia.org/wiki/Web_development"
                 target="_blank">Link</a></p>
-            <img src="photos/photo3.jpg" alt="code" style="width:500px;height:600px;">
+            <img src="../photos/photo3.jpg" alt="code" style="width:500px;height:600px;">
         </div>
     </section>
     
