--- a/pages/subpage_1.html
+++ b/pages/subpage_1.html
@@ -28,11 +28,44 @@
                  presence, the demand for skilled web developers continues to grow, offering 
                  a promising and rewarding career path.</p>
 
-            <li>Front-end Developer</li>
-            <li>Back-end Developer</li>
-            <li>Server Engeneer</li>
-            <li>Cloud Engeneer</li>
-            <li>Data Specialist</li>
+                 <table border="1" cellpadding="10" cellspacing="0">
+                    <thead>
+                      <tr>
+                        <th>Job Title</th>
+                        <th>Description</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Front-End Developer</td>
+                        <td>Focuses on building the user-facing part of websites using HTML, CSS, and JavaScript.</td>
+                      </tr>
+                      <tr>
+                        <td>Back-End Developer</td>
+                        <td>Handles server-side logic, databases, and APIs to ensure functionality behind the scenes.</td>
+                      </tr>
+                      <tr>
+                        <td>Full-Stack Developer</td>
+                        <td>Skilled in both front-end and back-end development, creating complete web applications.</td>
+                      </tr>
+                      <tr>
+                        <td>Web Designer</td>
+                        <td>Designs the visual elements of websites, focusing on aesthetics and user experience.</td>
+                      </tr>
+                      <tr>
+                        <td>UI/UX Designer</td>
+                        <td>Specializes in designing interfaces and enhancing the overall user experience.</td>
+                      </tr>
+                      <tr>
+                        <td>DevOps Engineer</td>
+                        <td>Works on deployment, monitoring, and scaling of web applications, ensuring smooth operations.</td>
+                      </tr>
+                      <tr>
+                        <td>Mobile Web Developer</td>
+                        <td>Optimizes web applications for mobile devices and implements responsive design techniques.</td>
+                      </tr>
+                    </tbody>
+                  </table>
 
             <p>For more information and sources visit <a href="https://en.wikipedia.org/wiki/Web_development"
                 target="_blank">Link</a></p>
